crates/aven-check/tests/fixtures/check/valid/explicit-shadow-fresh-type.av
shadowFreshType = (value: Int) =>
  result =
    value := "${value}"
    value
  (result, value)
