crates/aven-check/tests/fixtures/check/invalid/qualified-operator-bare-self.av
identity = (value: Self): Self => value
